--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,12 @@ title:               PhD. Eng. Marcelo Forets
 tagline:             'Researcher in Applied Mathematics'
 description:         'Post-doc researcher at VERIMAG group from Univ. Grenoble Alpes, France.'
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://main.marcelo-forets.fr/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://marcelo-forets.fr/" # the base hostname & protocol for your site, e.g. http://example.com
 
 github_username:  mforets
 
 # this is the number of posts that are shown at the same time in the Home page. In general it is used in index.html 
-paginate:            4
+paginate:            8
 
 # About/contact
 author:
