--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username:  mforets
 author:
   name:              marcelo forets
   url:               https://marcelo-forets.fr/
-  email:             marcelo.forets-irurtia@univ-grenoble-alpes.fr
+  email:             mforets@gmail.com
   contact:
     linkedin:  https://www.linkedin.com/in/marcelo-forets-irurtia-7b8238149/
     github:    https://github.com/mforets
